Change height of object back to 300px to avoid cut off in Chrome and co

--- a/styles.css
+++ b/styles.css
@@ -1344,7 +1344,7 @@ div#content-text {
 	padding:0 0 0 0;
 	
 	width:100%;
-	height:30px;
+	height:300px;
 	
 	text-align:left;
 }
